<resources>
    <string name="app_name">Human Activity Recognition</string>
    <string name="activity">Activity</string>
    <string name="probability">Probability</string>
    <string name="downstairs">Downstairs</string>
    <string name="jogging">Jogging</string>
    <string name="sitting">Sitting</string>
    <string name="standing">Standing</string>
    <string name="upstairs">Upstairs</string>
    <string name="walking">Walking</string>
    <string name="biking">Biking</string>
    <string name="button">Button</string>
    <string name="see_progress">SEE PROGRESS</string>
    <string name="textview">TextView</string>
    <string name="number_of_times_detected">Number of times detected</string>
    <string name="calories_burnt">Calories burnt</string>
    <string name="duration">Duration</string>
</resources>
