<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<TableLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ededed"
    android:padding="0dp"
    tools:context="io.github.introml.activityrecognition.MainActivity">

    <TableRow
        android:id="@+id/title_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#493ede"
        android:padding="10dp"
        android:textAlignment="center">

        <TextView
            android:id="@+id/title"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/activity"
            android:textAlignment="center"
            android:textColor="#E8E7FA"
            android:textSize="20sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:id="@+id/downstairs_row"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:background="#857be9"
        android:padding="10dp">


        <Button
            android:id="@+id/but_down"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#857be9"
            android:textColor="#C9C7F3"
            android:text="@string/downstairs"/>

    </TableRow>

        <TableRow
            android:id="@+id/jogging_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:background="#857be9"
            android:padding="10dp">


            <Button
                android:id="@+id/but_jog"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#857be9"
                android:textColor="#C9C7F3"
                android:text="@string/jogging" />


        </TableRow>

        <TableRow
            android:id="@+id/sitting_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:background="#857be9"
            android:padding="10dp">


            <Button
                android:id="@+id/but_sit"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#857be9"
                android:textColor="#C9C7F3"
                android:text="@string/sitting" />


        </TableRow>

        <TableRow
            android:id="@+id/standing_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:background="#857be9"
            android:padding="10dp">


            <Button
                android:id="@+id/but_stand"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#857be9"
                android:textColor="#C9C7F3"
                android:text="@string/standing" />


        </TableRow>

        <TableRow
            android:id="@+id/upstairs_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="#857be9"
            android:padding="10dp">

            <Button
                android:id="@+id/but_up"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#857be9"
                android:textColor="#C9C7F3"
                android:text="@string/upstairs" />


        </TableRow>

        <TableRow
            android:id="@+id/walking_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="#857be9"
            android:padding="10dp">

            <Button
                android:id="@+id/but_walk"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#857be9"
                android:textColor="#C9C7F3"
                android:text="@string/walking" />


        </TableRow>

        <TableRow
            android:id="@+id/biking_row"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:layout_marginTop="20dp"
            android:background="#857be9"
            android:padding="10dp">


            <Button
                android:id="@+id/but_bike"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#857be9"
                android:textColor="#C9C7F3"
                android:text="@string/biking" />


        </TableRow>

    </TableLayout>
</ScrollView>
